--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -8,8 +8,7 @@
     <title>Contato</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-
+<body class="contato">
     <nav>
         <ul>
             <li><a href="../../index.html">Início</a></li>
