--- a/src/pages/equipe.html
+++ b/src/pages/equipe.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/equipe.css">
 
 </head>
-<body>
+<body class="equipe">
     <nav>
          <ul>
             <li><a href="../../index.html">Início</a></li>
