--- a/src/pages/produtos.html
+++ b/src/pages/produtos.html
@@ -8,7 +8,7 @@
     <title>Produtos</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="produto">
     <nav>
             <ul>
                 <li><a href="../../index.html">Início</a></li>
