--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -8,7 +8,7 @@
     <title>História</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="sobre">
         <nav>
             <ul>
                 <li><a href="../../index.html">Início</a></li>
