Coloquei os novos requisitos one eram para ficar (efeitos.css), adicionei os  Pseudo-elementos que faltaram, criei o "@keyframes" e centralizei o titulo do video que estava na lateral do site.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <br>
     
     <!-- Seção do vídeo -->
-    <section>
+    <section style="text-align: center; padding: 40px 20px;">
         <h2>Assista ao nosso vídeo</h2>
         <div id="video">
             <iframe 
