--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <section id="historia" style="text-align: center; padding 20px">
+        <section id="historia" style="text-align: center; padding: 20px;">
             <h2>De onde viemos</h2>
             <p>
                 A Vinheria Agnello iniciou suas atividades em São Paulo há mais de 15 anos, contando com apenas uma loja física, onde oferece uma vasta gama de rótulos nacionais e internacionais.
